# slider_mcp

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  logging_config.py  main.py  mcp_server.py  middleware.py
app/models/: base.py  deck.py
app/renderers/: html_renderer.py  pptx_renderer.py
app/routes/: health.py
app/services/: assets.py  planning.py  stitch.py  validation.py
app/templates/: deck.html.jinja2
tests/: conftest.py  test_assets.py  test_base_models.py  test_config.py  test_deck_models.py  test_deployment.py  test_hardening.py  test_health.py  test_html_renderer.py  test_mcp_registration.py  test_mcp_tools.py  test_planning.py  test_pptx_renderer.py  test_stitch.py
